--- a/static/templates/layout.html
+++ b/static/templates/layout.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>{% block title %}{% endblock %} | ReThink</title>
+    <title>{% block title %}{% endblock %} | WikiMap</title>
     {% block imports %}{% endblock %}
   </head>
   <body>
     <div class=box>
-        <h1><a href="/">ReThink</a></h1>
+        <h1><a href="/">WikiMap</a></h1>
         {% block body %}{% endblock %}
     </div>
 
