--- a/static/templates/index.html
+++ b/static/templates/index.html
@@ -1,5 +1,8 @@
 {% extends "layout.html" %}
 {% block title %}Home{% endblock %}
+{% block imports %}
+<link href="{{ url_for('static', path='css/styles.css') }}" rel="stylesheet">
+{% endblock %}
 
 {% block body %}
 <form action="/" method="post">
